# sqllog-analysis

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  V0.4.0_IMPLEMENTATION_VERIFICATION.md  build.rs  config.toml  config.toml.example  rustfmt.toml  tarpaulin-report.html
.github/workflows/: clippy-strict.yml  release.yml  rust.yml
benches/: core_functions_bench.rs  datetime_benchmark.rs  duckdb_write_bench.rs  sqllog_bench.rs  sqllog_benchmark.rs
config/: config.toml
docs/: database-development-summary.md  database-import-plan.md  database-import.md
examples/: async_parsing_demo.rs  async_test.rs  check_sqlite.rs  concurrent_demo.rs  config_summary.rs  debug_sqlite_simple.rs  debug_trace_logging.rs  large_file_async_test.rs  multi_exporter_demo.rs  simple_usage.rs  sync_multi_exporter_demo.rs  sync_test.rs  test_default_feature.rs  test_defaults.rs  test_duckdb_feature.rs  trace_logging_demo.rs
output/: output.db
output_sync/: output_sync.db
releases/: release_notes_v0.2.1.md  release_notes_v0.3.0.md  release_notes_v0.3.1.md  release_notes_v0.4.0.md
src/: analysis_log.rs  app.rs  config.rs  duckdb_writer.rs  error.rs  error_writer.rs  input_path.rs  lib.rs  logging.rs  main.rs  process.rs  sqllog.rs
src/database/: duckdb_impl.rs  mod.rs  types.rs
src/exporter/: duckdb.rs  mod.rs  stats.rs
src/exporter/async_impl/: csv.rs  duckdb.rs  json.rs  mod.rs  multi_exporter.rs  sqlite.rs
src/exporter/sync_impl/: csv.rs  duckdb.rs  json.rs  mod.rs  multi_exporter.rs  sqlite.rs
src/sqllog/: async_parser.rs  concurrent_parser.rs  io.rs  mod.rs  parser.rs  sync_parser.rs  types.rs  utils.rs
src/sqllog/concurrent/: concurrent_parser.rs  export_workers.rs  mod.rs  parse_workers.rs  types.rs
tarpaulin/: coverage.html
tests/: analysis_log_tests.rs  async_features.rs  basic_features.rs  chunked_parse_tests.rs  concurrent_parser_advanced_tests.rs  concurrent_parser_tests.rs  config_advanced_tests.rs  config_tests.rs  coverage_boost.rs  coverage_extra_tests.rs  coverage_more.rs  csv_exporter.rs  duckdb_export_tests.rs  duckdb_exporter.rs  duckdb_in_memory_and_export_flags.rs  duckdb_index_failure.rs  duckdb_integration.rs  duckdb_writer_tests.rs  error_tests.rs  error_writer_integration_tests.rs  export_workers_advanced_tests.rs  export_workers_tests.rs  exporter_more_tests.rs  exporters_and_workers_tests.rs  exporters_tests.rs  integration_tests.rs  json_exporter.rs  json_exporter_tests.rs  log_init_dir_create_fail.rs  logging_features.rs  logging_tests.rs  main_advanced_tests.rs  main_cli_tests.rs  main_integration_tests.rs  main_tests.rs  multi_exporter_workers_tests.rs  parse_workers_advanced_tests.rs  parse_workers_tests.rs  parser_tests.rs  process_tests.rs  (+12 more)
tests/common/: mod.rs
tools/: plot_datetime_bench.py  plot_duckdb_write_bench.py  plot_sqllog_bench.py  plot_sqllog_varied.py
