[package]
name = "sqllog-analysis"
version = "1.0.0"
edition = "2024"
authors = ["guangl"]
description = "达梦数据库的 sqllog 日志解析和分析工具库"
license = "MIT"
repository = "https://github.com/guangl/sqllog-analysis"
keywords = []
categories = []

[lib]
name = "sqllog_analysis"
path = "src/lib.rs"

[[bin]]
name = "sqllog-cli"
path = "src/main.rs"

[dependencies]
# 核心依赖
regex = "1.11"
lazy_static = "1.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# 日志依赖（可选）
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
], optional = true }
tracing-appender = { version = "0.2", optional = true }

# 异步运行时支持
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# 进程间通信和多进程支持
crossbeam = "0.8"
serde_json = { version = "1.0", optional = true }
bincode = "1.3"

# 导出器依赖（可选）
# CSV 导出 - 无需额外依赖，使用标准库
rusqlite = { version = "0.29", features = [
    "bundled",
], optional = true } # SQLite 导出
duckdb = { version = "1.1", features = [
    "bundled",
], optional = true } # DuckDB 导出

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["logging", "sync"]
logging = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]
tokio = ["dep:tokio"]
sync = []
async = ["dep:tokio", "dep:futures", "dep:async-trait", "logging"]

# 导出器功能特性 - 同步版本
exporter-csv = []
exporter-json = ["dep:serde_json"]
exporter-sqlite = ["dep:rusqlite"]
exporter-duckdb = ["dep:duckdb"]

# 导出器功能特性 - 异步版本
exporter-csv-async = ["async", "exporter-csv"]
exporter-json-async = ["async", "exporter-json"]
exporter-sqlite-async = ["async", "exporter-sqlite"]
exporter-duckdb-async = ["async", "exporter-duckdb"]

# 导出器组合
all-exporters = [
    "exporter-csv",
    "exporter-json",
    "exporter-sqlite",
    "exporter-duckdb",
]

all-exporters-async = [
    "exporter-csv-async",
    "exporter-json-async",
    "exporter-sqlite-async",
    "exporter-duckdb-async",
]
